tests/ui/feature-gates/feature-gate-doc_notable_trait.stderr
error[E0658]: `#[doc(notable)]` is experimental
  --> $DIR/feature-gate-doc_notable_trait.rs:1:1
   |
LL | #[doc(notable)]
   | ^^^^^^^^^^^^^^^
   |
   = note: see issue #45040 <https://github.com/rust-lang/rust/issues/45040> for more information
   = help: add `#![feature(doc_notable_trait)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
