tests/ui/feature-gates/feature-gate-doc_notable_trait.rs
#[doc(notable)] //~ ERROR: `#[doc(notable)]` is experimental
trait SomeTrait {}

fn main() {}
